
	* libfreeipmi/src/bit-ops.c (bits_extract, bits_merge): Add parameter checks.

	* libfreeipmi/src/bit-ops.c (bits_merge): Fix bit shifting bug.
	
------------------------------------------------------------

2006-01-19  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/fiid.c (fiid_obj_create, fiid_obj_set_data,
	fiid_obj_get_data, fiid_obj_set_block, fiid_obj_get_block):
	Various bug fixes.
	
2006-01-18  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/fiid.h, libfreeipmi/src/fiid.c: Re-implemented
	with new, more abstract interface.

	* libfreeipmi/src/bit-ops.c (bits_extract, bits_merge): Add parameter checks.

	* libfreeipmi/src/bit-ops.c (bits_merge): Fix bit shifting bug.

	* Makefile.am, libfreeipmi/src/Makefile.am,
	libfreeipmi/src/freeipmi.h: Temporarily comment out all other code
	to begin testing.
	
------------------------------------------------------------
2006-01-09  Anand Babu  <ab@zresearch.com>

	* libfreeipmi/src/ipmi-kcs-interface.[c,h]: ipmi_kcs_get_mutex_semid,
	ipmi_kcs_io_init, ipmi_kcs_open, ipmi_kcs_write_interruptible,
	ipmi_kcs_cmd, ipmi_kcs_cmd_interruptible - obsolete API
	removed. Use UDM API instead.

2006-01-11  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-chassis-cmds.[c,h]: removed kcs command
	functions.

	* libfreeipmi/src/ipmi-lan-cmds.[c,h]: like wise.

	* libfreeipmi/src/ipmi-serial-cmds.[c,h]: like wise.

	* libfreeipmi/src/ipmi-sol-cmds.[c,h]: like wise.

2006-01-06  A Balamurugan  <bala@zresearch.com>

	* libfreeipmi/src/ipmi-dev-global-cmds.c: removed kcs command
	functions.

	* libfreeipmi/src/ipmi-msg-support-cmds.c: like wise.

	* libfreeipmi/src/ipmi-pef-cmds.c: like wise.

	* libfreeipmi/src/ipmi-sdr-repo-cmds.c: like wise.

	* libfreeipmi/src/ipmi-sel-cmds.c: like wise.

	* libfreeipmi/src/ipmi-sensor-cmds.c: like wise.

	* libfreeipmi/src/ipmi-sdr-repo-cache.c (ipmi_sdr_repo_info_write,
	ipmi_sdr_records_write, ipmi_sdr_cache_create): uses udm
	functions.

	* bmc-watchdog/src/bmc-watchdog.c: updated.